# rotator

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  abstracttexture.h  demo.cc  demo.h  fontcache.cc  fontcache.h  ioutil.cc  ioutil.h  lazytexture.cc  lazytexture.h  log.h  main.cc  mesh.cc  mesh.h  noncopyable.h  pixeltype.h  pixmap.cc  pixmap.h  shadermanager.cc  shadermanager.h  shaderprogram.cc  shaderprogram.h  shake.cc  shake.h  spritebatcher.cc  spritebatcher.h  texture.cc  texture.h  textureatlas.cc  textureatlas.h  textureatlaspage.cc  textureatlaspage.h  uipainter.cc  uipainter.h  util.h  (+2 more)
assets/shaders/: shape.frag  text.frag  text.vert
docs/: game.data  game.js  game.wasm  index.html
shaders/: shape.frag  shape.vert
